--- a/package.json
+++ b/package.json
@@ -37,6 +37,14 @@
       "last 1 safari version"
     ]
   },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1"
+  },
   "engines": {
     "node":"v12.16.1"
   },
