--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "npm": "6.13.4"
   },
   "private": true,
+  "homepage":"https://kausar2697.github.io/covit-19-tracker",
   "dependencies": {
     "@material-ui/core": "^4.9.10",
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,6 +15,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "classnames": "^2.2.6",
+    "gh-pages": "^2.2.0",
     "heroku": "^7.39.3",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
@@ -25,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
